--- a/JS-Fundametals/Exercise`s/DOM/02_Chat-Room-with-Pesho/template.html
+++ b/JS-Fundametals/Exercise`s/DOM/02_Chat-Room-with-Pesho/template.html
@@ -19,7 +19,7 @@
     <main id="main">
         <div id="exercise">
             <input type="text" id="myChatBox" placeholder="Me..."/>
-            <button type="button" name="myBtn">Sent</button>
+            <button name="myBtn">Sent</button>
             <div id="chatChronology"></div>
             <input type="text" id="peshoChatBox" placeholder="Pesho..."/>
             <button name="peshoBtn">Sent</button>
